[Fix] Home text align.

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -243,6 +243,11 @@
     }
 
     .spotlight {
+      p,
+      p.content {
+        text-align: left;
+      }
+
       ul {
         list-style-type: initial;
         list-style-position: outside;
